--- a/MyPortfolioUdemy/Views/Shared/Components/_FeatureComponentPartial/Default.cshtml
+++ b/MyPortfolioUdemy/Views/Shared/Components/_FeatureComponentPartial/Default.cshtml
@@ -1,13 +1,15 @@
-﻿<section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="https://i.hizliresim.com/5sysc4g.png" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+﻿@model List<MyPortfolioUdemy.DAL.Entities.Feature>
+<section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="https://i.hizliresim.com/5sysc4g.png" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
     <div class="overlay"></div>
     <div class="shadow-overlay"></div>
-    <div class="home-content">
-        <div class="row home-content__main">
+    @foreach (var item in Model)
+    {
+        <div class="home-content">
+            <div class="row home-content__main">
             <h3>Selam</h3>
             <h1>
-                I am Jonathan Doe. <br>
-                I am a graphic & UI/UX <br>
-                designer based in Somewhere.
+                @item.Title <br>
+                @item.Description
             </h1>
             <div class="home-content__buttons">
                 <a href="#works" class="smoothscroll btn btn--stroke">
@@ -23,7 +25,7 @@
                 </a>
             </div>
         </div>
-    </div> <!-- end home-content -->
+    </div> }
 
     <ul class="home-social">
         <li>
