--- a/MyPortfolioUdemy/Views/Shared/Components/_AboutComponentPartial/Default.cshtml
+++ b/MyPortfolioUdemy/Views/Shared/Components/_AboutComponentPartial/Default.cshtml
@@ -21,10 +21,10 @@
     <div class="row about-content about-content--buttons">
 
         <div class="col-six tab-full left">
-            <a href="#0" class="btn btn--primary full-width">Özgeçmiş İndir!</a>
+            <a href="~/hola-master/Yiğit Ataman.pdf" download="Yiğit Ataman.pdf" class="btn btn--primary full-width">Özgeçmiş İndir!</a>
         </div>
         <div class="col-six tab-full right">
-            <a href="#0" class="btn full-width">Bana Ulaş!</a>
+            <a href="#contact" class="btn full-width">Bana Ulaş!</a>
         </div>
 
     </div> <!-- end about-content buttons -->
