--- a/MyPortfolioUdemy/Views/Shared/Components/_FooterComponentPartial/Default.cshtml
+++ b/MyPortfolioUdemy/Views/Shared/Components/_FooterComponentPartial/Default.cshtml
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-full">
             <div class="footer-logo">
-                <a class="footer-site-logo" href="#0"><img src="~/hola-master/images/logo.png" alt="Homepage"></a>
+                <a class="footer-site-logo" href="#0"><img src="https://i.hizliresim.com/jl3pvmu.png" alt="Homepage"></a>
             </div>
             <ul class="footer-social">
                 <li>
