--- a/MyPortfolioUdemy/wwwroot/hola-master/css/main.css
+++ b/MyPortfolioUdemy/wwwroot/hola-master/css/main.css
@@ -2495,7 +2495,7 @@ html.no-csstransitions .home-content__main {
     top: 3rem;
     left: 3rem;
     opacity: 0;
-    visibility: hidden;
+    visibility: visible;
     -webkit-transform: translate3d(-100%, 0, 0);
     -ms-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0);
