--- a/MyPortfolioUdemy/Views/Shared/Components/_PortfolioComponentPartial/Default.cshtml
+++ b/MyPortfolioUdemy/Views/Shared/Components/_PortfolioComponentPartial/Default.cshtml
@@ -14,7 +14,7 @@
                 <div class="masonry__brick">
                     <div class="item-folio">
                     <div class="item-folio__thumb">
-                        <a href="@item.ImageUrl" class="thumb-link" title="@item.Title" data-size="1920x1080">
+                        <a href="@item.ImageUrl" title="@item.Title" data-size="1920x1080">
                             <img src="@item.ImageUrl" alt="">
                             <span class="shadow-overlay"></span>
                         </a>
@@ -33,7 +33,7 @@
                     <div class="item-folio__caption">
                         <p>@item.Description</p>
                     </div>
-                </div> <!-- end item-folio -->
+                </div> 
             </div> 
             }
         </div>
