--- a/MyPortfolioUdemy/Views/Shared/Components/_FooterComponentPartial/Default.cshtml
+++ b/MyPortfolioUdemy/Views/Shared/Components/_FooterComponentPartial/Default.cshtml
@@ -1,41 +1,20 @@
-﻿<footer>
+﻿@model List<MyPortfolioUdemy.DAL.Entities.SocialMedia>
+<footer>
     <div class="row">
         <div class="col-full">
             <div class="footer-logo">
-                <a class="footer-site-logo" href="#0"><img src="https://i.hizliresim.com/jl3pvmu.png" alt="Homepage"></a>
+                <a class="footer-site-logo" href="#0"><img src="https://i.hizliresim.com/jl3pvmu.png" style="max-width:300px;" alt="Homepage"></a>
             </div>
             <ul class="footer-social">
+                @foreach(var item in Model){
                 <li>
-                    <a href="#0">
-                        <i class="im im-facebook" aria-hidden="true"></i>
-                        <span>Facebook</span>
+                    <a href="@item.URL">
+                        <img src="@item.Icon" style="height:20px; width:20px;" />
+                        <span>@item.Title</span>
                     </a>
                 </li>
-                <li>
-                    <a href="#0">
-                        <i class="im im-twitter" aria-hidden="true"></i>
-                        <span>Twitter</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#0">
-                        <i class="im im-instagram" aria-hidden="true"></i>
-                        <span>Instagram</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#0">
-                        <i class="im im-behance" aria-hidden="true"></i>
-                        <span>Behance</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#0">
-                        <i class="im im-pinterest" aria-hidden="true"></i>
-                        <span>Pinterest</span>
-                    </a>
-                </li>
-            </ul>
+                }
+                </ul>
         </div>
     </div>
     <div class="row footer-bottom">
