--- a/MyPortfolioUdemy/Views/Shared/Components/_HeaderComponentPartial/Default.cshtml
+++ b/MyPortfolioUdemy/Views/Shared/Components/_HeaderComponentPartial/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿<header class="s-header">
     <div class="header-logo">
-        <a class="site-logo" href="~/Default/Index/"><img src="https://i.hizliresim.com/jl3pvmu.png" alt="Homepage"></a>
+        <a class="site-logo" href="~/Default/Index/"><img src="https://i.hizliresim.com/jl3pvmu.png" style="max-width:250px;" alt="Homepage"></a>
     </div>
     <nav class="header-nav-wrap">
         <ul class="header-nav">
