--- a/MyPortfolioUdemy/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/MyPortfolioUdemy/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -38,56 +38,56 @@
         </div>
         <ul class="nav">
             <li class="nav-item">
-                <a href="index.html">
-                    <i class="la la-dashboard"></i>
+                <a href="/About/Index/">
+                    <i class="la la-bars"></i>
                     <p>Hakkımda</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="components.html">
-                    <i class="la la-table"></i>
+                <a href="/Experience/ExperienceList/">
+                    <i class="la la-calendar"></i>
                     <p>Deneyimler</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="forms.html">
-                    <i class="la la-keyboard-o"></i>
+                <a href="/Feature/Index/">
+                    <i class="la la-map"></i>
                     <p>Öne Çıkan</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="tables.html">
-                    <i class="la la-th"></i>
+                <a href="/Portfolio/Index/">
+                    <i class="la la-folder-open"></i>
                     <p>Projeler</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="notifications.html">
-                    <i class="la la-bell"></i>
+                <a href="/Skill/Index/">
+                    <i class="la la-certificate"></i>
                     <p>Yetenekler</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="notifications.html">
-                    <i class="la la-bell"></i>
+                <a href="/Testimonial/Index/">
+                    <i class="la la-user"></i>
                     <p>Referanslar</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="notifications.html">
+                <a href="/SocialMedia/Index/">
                     <i class="la la-bell"></i>
                     <p>Sosyal Medya</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="notifications.html">
-                    <i class="la la-bell"></i>
+                <a href="/Stats/Index/">
+                    <i class="la la-pie-chart"></i>
                     <p>İstatistikler</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="notifications.html">
-                    <i class="la la-bell"></i>
+                <a href="/Login/Logout/">
+                    <i class="la la-power-off"></i>
                     <p>Çıkış Yap!</p>
                 </a>
             </li>
