--- a/MyPortfolioUdemy/Views/Testimonial/Index.cshtml
+++ b/MyPortfolioUdemy/Views/Testimonial/Index.cshtml
@@ -1,29 +1,29 @@
-﻿@model List<Experience>
+﻿@model List<Testimonial>
 @{
-    ViewData["Title"] = "ExperienceList";
+    ViewData["Title"] = "Index";
     Layout = "~/Views/Layout/Index.cshtml";
 }
 
 <div class="content">
     <div class="container-fluid">@* 
-        <h4 class="page-title">Deneyimler</h4> *@
+        <h4 class="page-title">Referanslar</h4> *@
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Deneyimler</div>
+                        <div class="card-title">Referanslar</div>
                     </div>
                     <div class="card-body">@* 
                         <div class="card-sub">
-                            Deneyimler ile ilgili işlemleri aşağıdaki panelden yapabilirsiniz.
+                            Referanslar ile ilgili işlemleri aşağıdaki panelden yapabilirsiniz.
                         </div> *@
                         <table class="table mt-3">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
+                                    <th scope="col">Referans</th>
                                     <th scope="col">Başlık</th>
-                                    <th scope="col">Ünvan</th>
-                                    <th scope="col">Tarih</th>
+                                    <th scope="col">Açıklama</th>
                                     <th scope="col">Sil</th>
                                     <th scope="col">Güncelle</th>
                                 </tr>
@@ -32,21 +32,23 @@
                                 @foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>@item.ExperienceId</td>
-                                        <td>@item.Head</td>
+                                        <td>@item.TestimonialId</td>
+                                        <td>@item.NameSurname</td>
                                         <td>@item.Title</td>
-                                        <td>@item.Date</td>
-                                        <td><a href="/Experience/DeleteExperience/@item.ExperienceId" class="btn btn-outline-danger">Sil</a></td>
-                                        <td><a href="/Experience/UpdateExperience/@item.ExperienceId" class="btn btn-outline-warning">Güncelle</a></td>
+                                        <td>@item.Description</td>
+                                        <td><a href="/Testimonial/DeleteTestimonial/@item.TestimonialId" class="btn btn-outline-danger">Sil</a></td>
+                                        <td><a href="/Testimonial/UpdateTestimonial/@item.TestimonialId" class="btn btn-outline-warning">Güncelle</a></td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
-                        <a href="/Experience/CreateExperience" class="btn btn-outline-info">Deneyim Ekle</a>
+                        <a href="/Testimonial/CreateTestimonial" class="btn btn-outline-info">Referans Ekle</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
 
