--- a/MyPortfolioUdemy/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/MyPortfolioUdemy/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -3,7 +3,7 @@
     <div class="scrollbar-inner sidebar-wrapper">
         <div class="user">
             <div class="photo">
-                <img src="~/ready-bootstrap-dashboard-master/assets/img/profile.jpg">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrBQBC8A_xwJz4xJPVizRRea9xZLrjF2zB2Q&s">
             </div>
             <div class="info">
                 <a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
@@ -37,6 +37,12 @@
             </div>
         </div>
         <ul class="nav">
+            <li class="nav-item">
+                <a href="/Stats/Index/">
+                    <i class="la la-home"></i>
+                    <p>Ana Sayfa</p>
+                </a>
+            </li>
             <li class="nav-item">
                 <a href="/About/Index/">
                     <i class="la la-bars"></i>
@@ -77,12 +83,6 @@
                 <a href="/SocialMedia/Index/">
                     <i class="la la-bell"></i>
                     <p>Sosyal Medya</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="/Stats/Index/">
-                    <i class="la la-pie-chart"></i>
-                    <p>İstatistikler</p>
                 </a>
             </li>
             <li class="nav-item">
