--- a/MyPortfolioUdemy/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/MyPortfolioUdemy/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -3,7 +3,7 @@
     <div class="scrollbar-inner sidebar-wrapper">
         <div class="user">
             <div class="photo">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrBQBC8A_xwJz4xJPVizRRea9xZLrjF2zB2Q&s">
+                <img src="@ViewBag.AccountImage">
             </div>
             <div class="info">
                 <a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
