--- a/MyPortfolioUdemy/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/MyPortfolioUdemy/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -44,21 +44,27 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/About/Index/">
+                <a href="/Feature/UpdateFeature/1">
+                    <i class="la la-map"></i>
+                    <p>Öne Çıkan</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/About/UpdateAbout/1">
                     <i class="la la-bars"></i>
                     <p>Hakkımda</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/Contact/UpdateContact/1">
+                    <i class="la la-phone"></i>
+                    <p>İletişim</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Experience/ExperienceList/">
                     <i class="la la-calendar"></i>
                     <p>Deneyimler</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="/Feature/Index/">
-                    <i class="la la-map"></i>
-                    <p>Öne Çıkan</p>
                 </a>
             </li>
             <li class="nav-item">
